--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,7 +1,4 @@
 @import url(https://fonts.googleapis.com/css2?family=OpenSans:wght@300;400;600;700&family=Roboto:wght@300;400;500;700&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap);
-
-
 html {
     background: #fff;
     font-size: 62.5%
@@ -16,8 +13,7 @@ html {
 body {
     font-size: 16px;
     line-height: 24px;
-    /* font-family: 'Open Sans', sans-serif; */
-    font-family: "Heebo", Sans-serif;
+    font-family: 'Open Sans', sans-serif;
     vertical-align: baseline;
     /* background-color: #e6e8eb; */
     color: #444;
@@ -31,7 +27,7 @@ h2,
 h3,
 h4 {
     line-height: 1.4;
-    /* font-family: Roboto, sans-serif !important; */
+    font-family: Roboto, sans-serif !important;
     margin: 0 0 20px;
     color: #111;
     /* text-transform: capitalize */
@@ -880,10 +876,6 @@ ul.item2-inline li:last-child {
     background-color: #fff
 }
 
-.not-home-page .bg-body {
-    background-color: #f0f1f4
-}
-
 .bg-body-color {
     background-color: #444
 }
@@ -1221,11 +1213,11 @@ ul.item2-inline li:last-child {
     -ms-transform: scale(1);
     transform: scale(1);
     -webkit-transition: all 1.5s ease-out;
-    -moz-transition: all 0.5s ease-out;
-    -ms-transition: all 0.5s ease-out;
-    -o-transition: all 0.5s ease-out;
-    transition: all 0.5s ease-out;
-    transition: all 0.5s ease-out;
+    -moz-transition: all 1.5s ease-out;
+    -ms-transition: all 1.5s ease-out;
+    -o-transition: all 1.5s ease-out;
+    transition: all 1.5s ease-out;
+    transition: all 1.5s ease-out;
     height: 200px;
     object-fit: cover;
 }
@@ -1283,13 +1275,10 @@ ul.item2-inline li:last-child {
 .img-overlay-70:before {
     opacity: .7;
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#111), to(transparent));
-    /* background-image: -webkit-linear-gradient(transparent, #111);
+    background-image: -webkit-linear-gradient(transparent, #111);
     background-image: -moz-linear-gradient(transparent, #111), -moz-linear-gradient(transparent, #111);
     background-image: -o-linear-gradient(transparent, #111), -o-linear-gradient(transparent, #111);
-    background-image: linear-gradient(transparent, #111), linear-gradient(transparent, #111); */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(55%, transparent), to(rgba(0, 0, 0, .95)));
-    background: -o-linear-gradient(top, transparent 55%, rgba(0, 0, 0, .95) 100%);
-    background: linear-gradient(to bottom, transparent 55%, rgba(0, 0, 0, .95) 100%);
+    background-image: linear-gradient(transparent, #111), linear-gradient(transparent, #111);
     content: "";
     height: 70%;
     bottom: 0;
@@ -1297,21 +1286,7 @@ ul.item2-inline li:last-child {
     right: 0;
     position: absolute;
     width: 100%;
-    z-index: 1;
-    pointer-events: none
-}
-
-.gradient-overlay {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(55%, transparent), to(rgba(0, 0, 0, .95)));
-    background: -o-linear-gradient(top, transparent 55%, rgba(0, 0, 0, .95) 100%);
-    background: linear-gradient(to bottom, transparent 55%, rgba(0, 0, 0, .95) 100%);
+    z-index: 1
 }
 
 .more-info-link {
@@ -1620,7 +1595,7 @@ ul.item2-inline li:last-child {
     text-transform: capitalize;
     font-weight: 600;
     font-size: 18px;
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     z-index: 2
 }
 
@@ -2648,7 +2623,7 @@ ul.item2-inline li:last-child {
     font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
-    /* font-family: Roboto, sans-serif */
+    font-family: Roboto, sans-serif
 }
 
 .btn-tab li a {
@@ -2685,7 +2660,7 @@ ul.item2-inline li:last-child {
     background-color: #e53935;
     text-transform: uppercase;
     color: #fff;
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     font-size: 15px;
     font-weight: 700;
     -webkit-transition: all .5s ease-out;
@@ -2713,7 +2688,7 @@ ul.item2-inline li:last-child {
     background-color: #e53935;
     text-transform: uppercase;
     color: #fff;
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     font-size: 14px;
     font-weight: 700;
     -webkit-transition: all .5s ease-out;
@@ -2741,7 +2716,7 @@ ul.item2-inline li:last-child {
     background-color: #e53935;
     text-transform: capitalize;
     color: #fff;
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     font-size: 16px;
     font-weight: 500;
     -webkit-transition: all .5s ease-out;
@@ -3039,11 +3014,11 @@ ul.header-social li a {
     text-align: right
 }
 
-@media only screen and (max-width:992px) {
+@media only screen and (max-width:991px) {
     .header-action-item {
         position: absolute;
         right: 5px;
-        top: 10px;
+        top: 17px;
         z-index: 100
     }
 }
@@ -3137,8 +3112,7 @@ ul.header-social li a {
 
 .header-search-light .search-input {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: -13px;
     right: 33px;
     z-index: 10;
     height: 42px;
@@ -3815,15 +3789,7 @@ div#wrapper.open>.offcanvas-mask {
     -moz-transition: all .5s ease-out;
     -ms-transition: all .5s ease-out;
     -o-transition: all .5s ease-out;
-    transition: all .5s ease-out;
-    -webkit-animation: moveDown .75s;
-    animation: moveDown .5s;
-}
-
-@keyframes moveDown {
-    from {top: -100%}
-    /* 50% {top: 100px !important;} ignored */
-    to {top: 0;}
+    transition: all .5s ease-out
 }
 
 @media only screen and (max-width:991px) {
@@ -3848,7 +3814,7 @@ div#wrapper.open>.offcanvas-mask {
 .main-menu-area .ne-main-menu nav ul li a {
     color: #fff;
     display: block;
-    /* font-family: Roboto, sans-serif !important; */
+    font-family: Roboto, sans-serif !important;
     font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
@@ -4246,7 +4212,7 @@ div#wrapper.open>.offcanvas-mask {
 }
 
 .header-style5 .main-menu-area .ne-main-menu nav ul li a {
-    padding: 18px 8px;
+    padding: 12px 8px;
     color: black
 }
 
@@ -4289,7 +4255,7 @@ div#wrapper.open>.offcanvas-mask {
 }
 
 .header-style5 .stick .ne-main-menu nav ul li a {
-    padding: 18px 8px
+    padding: 12px 8px
 }
 
 .header-style5 .stick .ne-main-menu nav ul li:first-child a {
@@ -4580,7 +4546,7 @@ div#wrapper.open>.offcanvas-mask {
     border-bottom: 1px solid white;
     position: relative;
     text-align: center;
-    height: 60px;
+    /* height: 60px; */
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -4611,7 +4577,7 @@ div#wrapper.open>.offcanvas-mask {
 
 /* .mean-container .mean-bar+div#wrapper */
 .mean-container .mean-bar+div #wrapper {
-    padding-top: 59px
+    padding-top: 82px
 }
 
 .ticker-wrapper.has-js {
@@ -4789,7 +4755,7 @@ div#wrapper.open>.offcanvas-mask {
     font-size: 24px;
     font-weight: 500;
     color: #fff;
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     line-height: 1.5;
     width: 70%
 }
@@ -5986,6 +5952,35 @@ ul.blog-tags li:first-child {
     right: 30px
 } */
 
+.rao-vat-submit .form-group {
+    margin-bottom: 20px
+}
+
+.rao-vat-submit .form-group .form-control {
+    color: #111;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.rao-vat-submit .form-group input {
+    height: 45px;
+}
+
+.rao-vat-submit .form-group select {
+    height: 45px;
+    font-size: 14px;
+}
+
+.dp__input {
+    font-size: 14px !important;
+}
+
+.dp__input_wrap svg {
+    width: 16px !important;
+    height: 16px !important;
+}
+
 .leave-comments .form-group {
     margin-bottom: 20px
 }
@@ -6107,7 +6102,7 @@ ul.blog-tags li:first-child {
 }
 
 .breadcrumbs-area .breadcrumbs-content ul li a {
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     font-size: 14px;
     color: #9d9c9c;
     -webkit-transition: all .5s ease-out;
@@ -6147,7 +6142,7 @@ ul.blog-tags li:first-child {
 }
 
 .breadcrumbs-area2 .breadcrumbs-content ul li a {
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     font-size: 14px;
     color: #9d9c9c;
     -webkit-transition: all .5s ease-out;
@@ -6308,8 +6303,8 @@ footer {
 }
 
 footer .footer-area-top {
-    /* margin-top: 24px; */
-    background-color: #121026;
+    margin-top: 24px;
+    background-color: #323232;
     padding: 60px 0 0px;
     border-bottom: 1px solid #4d4d4d
 }
@@ -6368,7 +6363,7 @@ footer .footer-box ul.popular-categories li a {
     display: block;
     color: #fff;
     font-size: 14px;
-    /* font-family: Poppins, sans-serif; */
+    font-family: Poppins, sans-serif;
     -webkit-transition: all .5s ease-out;
     -moz-transition: all .5s ease-out;
     -ms-transition: all .5s ease-out;
@@ -6461,7 +6456,7 @@ footer .footer-box ul.post-gallery figure:hover::before {
 
 footer .footer-area-bottom {
     background-color: #000;
-    padding: 20px 0;
+    padding: 40px 0;
 }
 
 footer .footer-area-bottom .footer-logo {
@@ -6934,9 +6929,9 @@ ul.footer-social li a:hover {
     }
     .on-mobile-fixed {
         position: fixed;
-        top: 10px
+        top: 20px
     }
-    /* .on-mobile-fixed ul {
+    .on-mobile-fixed ul {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -6945,7 +6940,7 @@ ul.footer-social li a:hover {
         -webkit-align-items: center;
         -ms-flex-align: center;
         align-items: center
-    } */
+    }
 }
 
 @media only screen and (max-width:767px) {
@@ -7076,33 +7071,131 @@ ul.footer-social li a:hover {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3; /* start showing ellipsis when 3rd line is reached */
     white-space: pre-wrap;
+  }
+
+.flex {
+    display: flex;
 }
 
-.elipsis-2-lines {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2; /* start showing ellipsis when 3rd line is reached */
-    white-space: pre-wrap;
+.flex-col {
+    flex-direction: column;
 }
 
-
-.elipsis-1-lines {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1; /* start showing ellipsis when 3rd line is reached */
-    white-space: pre-wrap;
+.flex-1 {
+    flex: 1 1 0%;
 }
 
-.element-container {
-    max-width: 1140px;
-    margin: 0 auto;
-    padding: 0 15px;
+.flex-wrap {
+    flex-wrap: wrap;
 }
 
-@media only screen and (max-width:1024px) {
-    .element-container {
-        max-width: 1024px;
-    }
+.max-w-sm {
+    max-width: 24rem;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.p-7 {
+    padding: 1.75rem;
+}
+
+.border-gray-300 {
+    --tw-border-opacity: 1;
+    border-color: rgb(209 213 219 / 1);
+    border-color: rgb(209 213 219 / 1);
+}
+
+.border-dashed {
+    border-style: dashed;
+}
+
+.border-2 {
+    border-width: 2px;
+}
+
+.rounded-md {
+    border-radius: 0.375rem;
+}
+
+.gap-1 {
+    gap: 0.25rem;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.justify-content {
+    justify-content: center;
+}
+
+.gap-1 {
+    gap: 0.25rem;
+}
+
+.text-indigo-600 {
+    --tw-text-opacity: 1;
+    color: rgb(79 70 229 / 1);
+}
+
+.text-gray-500 {
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / 1);
+}
+
+.font-medium {
+    font-weight: 500;
+}
+
+.w-2\/5 {
+    width: 40%;
+}
+
+.text-lg {
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.75rem; /* 28px */
+}
+
+.text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.h-36 {
+    height: 9rem/* 144px */;
+}
+
+.w-72 {
+    width: 18rem/* 288px */;
+}
+
+.h-5 {
+    height: 1.25rem/* 20px */;
+}
+
+.w-5 {
+    width: 1.25rem/* 20px */;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.h-full {
+    height: 100%;
+}
+
+.object-cover {
+    object-fit: cover;
 }
