--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -5986,6 +5986,36 @@ ul.blog-tags li:first-child {
     right: 30px
 } */
 
+
+.rao-vat-submit .form-group {
+    margin-bottom: 20px
+}
+
+.rao-vat-submit .form-group .form-control {
+    color: #111;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.rao-vat-submit .form-group input {
+    height: 45px;
+}
+
+.rao-vat-submit .form-group select {
+    height: 45px;
+    font-size: 14px;
+}
+
+.dp__input {
+    font-size: 14px !important;
+}
+
+.dp__input_wrap svg {
+    width: 16px !important;
+    height: 16px !important;
+}
+
 .leave-comments .form-group {
     margin-bottom: 20px
 }
@@ -7099,6 +7129,137 @@ ul.footer-social li a:hover {
     max-width: 1140px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-col {
+    flex-direction: column;
+}
+
+.flex-1 {
+    flex: 1 1 0%;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.max-w-sm {
+    max-width: 24rem;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.p-7 {
+    padding: 1.75rem;
+}
+
+.border-gray-300 {
+    --tw-border-opacity: 1;
+    border-color: rgb(209 213 219 / 1);
+    border-color: rgb(209 213 219 / 1);
+}
+
+.border-dashed {
+    border-style: dashed;
+}
+
+.border-2 {
+    border-width: 2px;
+}
+
+.rounded-md {
+    border-radius: 0.375rem;
+}
+
+.gap-1 {
+    gap: 0.25rem;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.justify-content {
+    justify-content: center;
+}
+
+.gap-1 {
+    gap: 0.25rem;
+}
+
+.text-indigo-600 {
+    --tw-text-opacity: 1;
+    color: rgb(79 70 229 / 1);
+}
+
+.text-gray-500 {
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / 1);
+}
+
+.font-medium {
+    font-weight: 500;
+}
+
+.w-2\/5 {
+    width: 40%;
+}
+
+.text-lg {
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.75rem; /* 28px */
+}
+
+.text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+}
+
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.h-36 {
+    height: 9rem/* 144px */;
+}
+
+.w-72 {
+    width: 18rem/* 288px */;
+}
+
+.h-5 {
+    height: 1.25rem/* 20px */;
+}
+
+.w-5 {
+    width: 1.25rem/* 20px */;
+}
+
+.w-full {
+    width: 100%;
+}
+
+.h-full {
+    height: 100%;
+}
+
+.object-cover {
+    object-fit: cover;
+}
+
+.section-wrapper {
+    padding: 30px 0;
 }
 
 @media only screen and (max-width:1024px) {
