--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -9,7 +9,7 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  color: #d72924;
+  color: black;
   font-weight: 600;
   margin: 0 !important;
   padding-top: 2px;
