--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1288,10 +1288,10 @@ ul.item2-inline li:last-child {
     background-image: -o-linear-gradient(transparent, #111), -o-linear-gradient(transparent, #111);
     background-image: linear-gradient(transparent, #111), linear-gradient(transparent, #111); */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(55%, transparent), to(rgba(0, 0, 0, .95)));
-    background: -o-linear-gradient(top, transparent 55%, rgba(0, 0, 0, .95) 100%);
-    background: linear-gradient(to bottom, transparent 55%, rgba(0, 0, 0, .95) 100%);
+    background: -o-linear-gradient(top, transparent 20%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(to bottom, transparent 20%, rgba(0, 0, 0, 1) 100%);
     content: "";
-    height: 70%;
+    height: 80%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -2323,9 +2323,9 @@ ul.item2-inline li:last-child {
 .mask-content-lg {
     position: absolute;
     z-index: 7;
-    bottom: 10px;
-    left: 30px;
-    padding-right: 30px
+    bottom: 5px;
+    left: 18px;
+    padding-right: 18px
 }
 
 @media only screen and (max-width:575px) {
