--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -9,7 +9,7 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  color: #d72924;
+  color: #ffff80;
   font-weight: 600;
   margin: 0 !important;
   padding-top: 2px;
@@ -20,7 +20,7 @@
   color: #000;
 }
 
-.goog-te-gadget>*:nth-child(n + 2) {
+.goog-te-gadget > *:nth-child(n + 2) {
   display: none;
 }
 
@@ -76,7 +76,7 @@
 }
 
 .flex-1 {
-  flex: 1 1 0%; 
+  flex: 1 1 0%;
 }
 
 .justify-center {
@@ -112,19 +112,19 @@
 }
 
 .border-gray-300 {
-  border-color: #D1D5DB;
+  border-color: #d1d5db;
 }
 
 .border-red-500 {
-  border-color: #EF4444;
+  border-color: #ef4444;
 }
 
 .bg-gray-50 {
-  background-color: #F9FAFB;
+  background-color: #f9fafb;
 }
 
 .bg-red-500 {
-  background-color: #EF4444;
+  background-color: #ef4444;
 }
 
 .text-gray-900 {
@@ -132,38 +132,38 @@
 }
 
 .text-gray-500 {
-  color: #6B7280; 
+  color: #6b7280;
 }
 
 .text-red-500 {
-  color: #EF4444;
+  color: #ef4444;
 }
 
 .text-indigo-600 {
-  color: #4F46E5;
+  color: #4f46e5;
 }
 
 .hover\:text-indigo-700:hover {
-  color: #4338CA;
+  color: #4338ca;
 }
 
 .hover\:text-red-700:hover {
-  color: #B91C1C;
+  color: #b91c1c;
 }
 
 .hover\:text-blue-500:hover {
-  color: #3B82F6;
+  color: #3b82f6;
 }
 
-.space-y-8>*+* {
+.space-y-8 > * + * {
   margin-top: 2rem;
 }
 
-.space-y-6>*+* {
+.space-y-6 > * + * {
   margin-top: 1.5rem;
 }
 
-.normal-case	{
+.normal-case {
   text-transform: none;
 }
 
@@ -195,16 +195,16 @@
 }
 
 .shadow-md {
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .hover\:shadow:hover {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
 
-
 .p-8 {
-  padding: 2rem
+  padding: 2rem;
 }
 
 .py-1\.5 {
