--- a/theme-html/newsedge/style.css
+++ b/theme-html/newsedge/style.css
@@ -950,7 +950,7 @@ ul.item2-inline li:last-child {
 #scrollUp {
     background-color: rgba(229, 57, 53, .3);
     bottom: 5px;
-    color: #fff;
+    color: #000;
     display: block;
     font-size: 18px;
     height: 44px;
